--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "4.2.4"
+  },
   "author": "Timothy Frame",
   "license": "MIT",
   "dependencies": {
